dev/openscience/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openscience
  namespace: openscience
spec:
  ports:
    - name: http
      port: 4097
      protocol: TCP
